@@ -25,6 +25,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #5103: SSL handshake would ignore the socket timeout and block
+  indefinitely if the other end didn't respond.
+
 - The do_handshake() method of SSL objects now adjusts the blocking mode of
   the SSL structure if necessary (as other methods already do).
 
